site/css/wea.css
/* ... */
a, a:visited{
    color:#2A5DB0;
}



.showTitle{
    border-bottom: 1px dotted;
    border-bottom-color: inherit;
}

.JS .showTitle{
    cursor:pointer;
}

.breadcrumb + h2 {
    margin-top:.2rem;
}


#info, #text{
    margin: 0 auto;
}

#mainBody:not(.docBornDigitalExhibit) > #text{
    max-width:50rem;
}

#info{
      background-color: var(--wea-info-bg-color);
      overflow:hidden;
      padding: 5% 8% 3% 8%;
      margin:0 auto;
      }

#mainBody:not(.docBornDigitalExhibit) > #info{
     display:grid;
      grid-template-areas:
      "facsimile metadata_container metadata_container relatedItems"
      "facsimile metadata_container metadata_container relatedItems"
      "facsimile metadata_container metadata_container relatedItems"
      "additional_info additional_info additional_info additional_info";
      
      grid-template-columns: minmax(8rem, 18rem) 58% 1fr 1fr;
      grid-column-gap:1.5rem;
      grid-row-gap:1.5rem;
}
#relatedItems{
    grid-area: relatedItems;
}

#relatedItems .content{
    flex-direction:row!important;
}

#relatedItems .content > div{
    max-width:8rem;
    margin:1em;
    padding:1em;
}

#relatedItems .content > div > *{
    margin:0 auto;
}


#relatedItems .metadataLabel{
    padding-bottom:.25rem;
}

.content img{
    max-width:8rem;
}

#mainBody{
 /* We need to margin-top if we do a sticky header */
 /* margin-top: 2.5rem;*/
  padding:0 10% 5% 10%;
  flex:1;
  margin-top: var(--body-margin-top);
}

#facsimile{
    grid-area: facsimile;
    width: fit-content;
    display: flex;
    align-items: center;
    justify-content: center;
}

#metadata_container{
    grid-area: metadata_container;
}


/****************************************************************** MEDIA GALLERY ********/

div[data-type='listFigure']{
    display:flex;
    flex-direction:row;
    flex-wrap:wrap;
    
}

div[data-type="listFigure"] > div{
    width:8rem;
    padding:5%;
    margin:.5rem;
    font-size:90%;
    border:1px solid black;
}

div[data-type="listFigure"] > div:target{
    border: 1px solid var(--wea-pink);
}


div[data-type='listFigure'] img{
    max-width:8rem;
    height:auto;
}


/* ***************************************************** ADDITIONAL INFO PANEL ********** */
#additional_info{
    grid-area: additional_info;

   
}

#additional_info > div{
    margin-top:1rem;
    background: var(--wea-additional-info-bg-color);
    padding: 1rem;
}

#additional_info .content{
    display:flex;
    flex-flow: column;
    align-content: baseline;
    
}

.JS .expandable.closed > .content{
    max-height:0;
    overflow:hidden;
    transition: max-height .2s ease-in-out;
    display:block;
}

.JS .expandable.open > .content{
    max-height:30rem;
    transition: max-height .2s ease-in-out;
    overflow-y:auto;
}

.JS .additionalInfoHeader{
    cursor:pointer;
    
}

.JS #additional_info > div  .additionalInfoHeader::after,
.JS #additional_info > div.closed  .additionalInfoHeader::after{
    content: "\02795";
    float:right;
    font-size:80%;
}

.JS #additional_info > div.open > .additionalInfoHeader::after{
    content:"\2796";
}




#searchButtons{
    top: 10%;
    position:fixed;
    float:left;
    
    
}

/**** LINKS ***** */

header a,
header a:visited
{
    color:inherit;
}

a:hover,
.clicked,
#popup_closer:hover,
.JS .showTitle:hover,
.breadcrumb > a,
.breadcrumb > a:visited,
.JS .additionalInfoHeader:hover,
.JS .additionalInfoHeader:hover::after,
header a:hover{
    color:var(--wea-pink);
    transition: color 0.2s ease-in-out;
}

div:target:before{
      content: '';
      display: block;
      position: relative; 
      width: 0; 
      height: var(--anchor-offset);
      margin-top: calc(var(--anchor-offset) * -1);
      visibility: hidden;
      }


[data-el='pb']:target:before{
      content: '';
      display: block;
      position: relative; 
      width: 0; 
      height: var(--pb-anchor-offset);
      margin-top: calc(var(--pb-anchor-offset) * -1);
      visibility: hidden;
}
/* FOR INLINE ELEMENTS */
a:target:before{
    content:"";    
    display: inline-block;    
    vertical-align: top;
    position: relative;       
    top: calc(var(--anchor-offset) * -1.6); 
    visibility: hidden;
}



#hamburger:hover > div{
    background-color:var(--wea-pink);
    transition: color 0.2s ease-in-out;
}







.thumb{
    margin:0;
    position:relative; 
    display:inline-block;
}



.thumb img{
    max-width:18rem;
    width:100%;
    height:100%;
    
}

.imageText{
    position: absolute;
    z-index: 1;
    color: white;
    background: transparent;
    opacity: 0;
    left: 0;
    top: 0;
    transition: all 0.8s ease;
    height: 100%;
    width: 100%;
    text-align:center;
    overflow:hidden;
    border: 1px solid var(--wea-pink);
}

.imageText.portrait{
    font-size:2rem;
}

.imageText.landscape{
    font-size:1.4rem;
}

/*{
    height: 100%;
    width: 100%;
    position:relative;
    opacity:0;
    text-decoration:none;
    display: flex;
    justify-content: center;
    align-items: center;
    color:inherit;
    
}*/

.thumb:hover .imageText{
    opacity: 1;
    background: rgba(0, 0, 0, 0.8);
    color:white;
}


.imageText *{
    color:white;
}

.pdfSize{
    font-size:50%;
    display:inline-block;
}

#unhighlightButton,
#goToNextSearch,
#goToPrevSearch{
    background-color: #dedede;
    max-width: 6em;
    margin-top: .5rem;
    color: black;
    font-size: 90%;
    text-align: center;
    cursor: pointer;
    min-height: 4rem;
}


#unhighlightButton.unhighlighted ~ div{
    display:none;
}

#unhighlightButton:hover,
#goToNextSearch:hover,
#goToPrevSearch:hover{
    background-color: #c7c7c7;
}

#unhighlightButton.unhighlighted::after{
    content: "Highlight search matches ("attr(data-count)")";
}

#unhighlightButton.highlighted::after{
    content: "Unhighlight search matches ("attr(data-count)")";
}

#goToNextSearch::after{
    content: "Go to next match";
}
/* ... */

